# firevoice

./: .gitignore  LICENSE  README.md  firevoice.sh  logs  main.py  pyproject.toml  requirements.txt  restart  start  status  statusbar.py  stop  voice-input.sh  voice-replacements.json
firevoice/: __init__.py  __main__.py  app.py  cli.py  config.py  overlay.py  recorder.py  statusbar.py  trigger.py
firevoice/data/: voice-replacements.json
