[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firevoice"
version = "0.1.0"
description = "A blazing-fast, fully local voice-to-text tool for macOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "cshiraga"}]
keywords = ["voice", "speech-to-text", "whisper", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "faster-whisper",
    "pyautogui",
    "sounddevice",
    "pynput",
    "numpy",
    "scipy",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/cshiraga/firevoice"
Repository = "https://github.com/cshiraga/firevoice"

[project.scripts]
firevoice = "firevoice.cli:main"

[tool.setuptools.packages.find]
include = ["firevoice*"]

[tool.setuptools.package-data]
firevoice = ["data/*.json"]
